pp-1217: fix scrollbar

--- a/src/views/CreateBook/PrintEdition/EditScreen/PageEdition/PageWrapper/style.scss
+++ b/src/views/CreateBook/PrintEdition/EditScreen/PageEdition/PageWrapper/style.scss
@@ -3,7 +3,7 @@ $rulerWidth: 23px;
 .page-wrapper {
   position: absolute;
   width: 100%;
-  height: calc(100% - 1px);
+  height: calc(100% - 6px);
   top: 0;
   left: 0;
   background-color: $color-white4;
